@@ -21,6 +21,7 @@ import java.io.File;
 import java.io.FileReader;
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -153,12 +154,10 @@ public class RelevanceJudgments {
    */
   private static Path getQrelsPath(Path qrelsPath) throws IOException {
     if (!Qrels.contains(qrelsPath)) {
-      // If the topic file is not in the list of known topics, we assume it is a local
-      // file.
+      // If the topic file is not in the list of known topics, we assume it is a local file.
       Path tempPath = Paths.get(getCacheDir(), qrelsPath.getFileName().toString());
       if (Files.exists(tempPath)) {
-        // if it is a unregistred topic in the Topics Enum, but it is in the cache, we
-        // use it
+        // if it is a unregistred topic in the Topics Enum, but it is in the cache, we use it.
         return tempPath;
       }
       return qrelsPath;
@@ -187,11 +186,11 @@ public class RelevanceJudgments {
     String qrelsURL = SERVER_PATH + qrelsPath.getFileName().toString();
     System.out.println("Downloading qrels from " + qrelsURL);
     File qrelsFile = new File(getCacheDir(), qrelsPath.getFileName().toString());
+
     try {
-      FileUtils.copyURLToFile(new URL(qrelsURL), qrelsFile);
+      FileUtils.copyURLToFile(new URI(qrelsURL).toURL(), qrelsFile);
     } catch (Exception e) {
-      System.out.println("Error downloading topics from " + qrelsURL);
-      throw e;
+      throw new IOException("Error downloading topics from " + qrelsURL);
     }
     return qrelsFile.toPath();
   }
